nvm, fix border color on progress tab in dark mode

--- a/src/dark-mode/index.styl
+++ b/src/dark-mode/index.styl
@@ -19,7 +19,7 @@
 	[x] Announcements
 	[ ] Week
 	[x] Year
-	[ ] Progress
+	[x] Progress
 	[x] College
 	[ ] Resources
 	[ ] Focus Area Page
@@ -187,6 +187,7 @@ html[bslp-dark]
 		yearTooltip,
 		composer,
 		dropdown,
+		progressWeekSection,
 		progressFeedLineStopIcon 
 	)}
 		border-color: darkDivide !important
